@@ -31,7 +31,6 @@
 (require 'init-ecb)
 (require 'init-emms)
 (require 'init-flycheck)
-(require 'init-flymake)
 (require 'init-helm)
 (require 'init-hideshow)
 (require 'init-highlight)
